--- a/TeslaSimLab/TeslaSimLab.csproj
+++ b/TeslaSimLab/TeslaSimLab.csproj
@@ -55,6 +55,8 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Robot.cs" />
+    <Compile Include="RobotConfig.cs" />
     <Compile Include="Vector.cs" />
     <Compile Include="Wheel.cs" />
     <EmbeddedResource Include="MainForm.resx">
