Начал расписывать кинематику робота, начал писать класс Environment

--- a/TeslaSimLab/TeslaSimLab.csproj
+++ b/TeslaSimLab/TeslaSimLab.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Environment.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
